@@ -1,3 +1,7 @@
+2008-05-22  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf/gconf-internals.c: Plug a leak.
+
 2008-05-21  Ray Strode  <rstrode@redhat.com>
 
 	* gconf/gconftool.c (main): Fall back to local
